[package]
name = "laos-relay"
version = "1.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.1.5" }
futures = "0.3.28"
hex = "0.4"
log = "0.4.19"
num-format = "0.4"
num-traits = "0.2"
rbtag = "0.3"
rustc-hex = "2.1"
structopt = "0.3"
signal-hook = "0.3.16"
signal-hook-async-std = "0.2.2"
strum = { version = "0.25.0", features = ["derive"] }

# Bridge dependencies
evochain-primitives = { git = "https://github.com/freeverseio/laos-evolution-node", branch = "dev" }
bp-header-chain = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
bp-messages = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
bp-parachains = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
bp-runtime = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
bridge-runtime-common = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
pallet-bridge-parachains = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
pallet-bridge-messages = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
relay-rococo-client = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
relay-substrate-client = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
relay-utils = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
# we are not using this runtime to craft call or transactions, but we still need it
# to prepare large XCM messages
substrate-relay-helper = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }

# Local relay clients
relay-laos-evolution-client = { path = "../client-laos-evolution" }
relay-laos-ownership-client = { path = "../client-laos-ownership" }

# LAOS runtimes
node-template-runtime = { git = "https://github.com/freeverseio/laos-evolution-node", branch = "dev" }
laos-runtime = { git = "https://github.com/freeverseio/laos-ownership-node.git", branch = "dev" }

# Substrate Dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[dev-dependencies]
bp-test-utils = { git = "https://github.com/freeverseio/parity-bridges-common.git", branch = "dev" }
hex-literal = "0.4"
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
tempfile = "3.7"
finality-grandpa = { version = "0.16.2" }
